# routetools

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  config.toml  config_land.toml  config_noland.toml  pyproject.toml  tools_parse_uv_lock.py  tools_show_lines.py
.github/: copilot-instructions.md
.github/workflows/: pre-commit-main.yml  pre-commit-pr.yml  pytest.yml
codabench/: README.md  build_bundle.sh  competition.yaml  compute_worker_patched.py
codabench/pages/: data.html  data.md  evaluation.html  evaluation.md  overview.html  overview.md  submission.html  submission.md  terms.html  terms.md
codabench/reference_data/: config.json
codabench/scoring_program/: Dockerfile  metadata.yaml  requirements.txt  scoring.py
codabench/starting_kit/: starting_kit.py
docs/: cmaes_diagnostic.md  parametric_model.md  swopp3_sweep_results.md
routetools/: __init__.py  _ports.py  _version.py  analysis_config.py  benchmark.py  circumnavigate.py  cmaes.py  cost.py  fms.py  interpolate.py  land.py  performance.py  plot.py  swopp3.py  swopp3_output.py  swopp3_runner.py  swopp3_validate.py  utils.py  vectorfield.py  violation_counts.py  violations.py  weather.py
routetools/_cost/: haversine.py  waves.py
routetools/era5/: __init__.py  download_cds.py  download_gcs.py  loader.py
scripts/: activate_gpu.sh  compare_era5_sources.py  compare_scorers.py  demo_land_avoidance.py  download_era5.py  draw_fms.py  draw_fms_land.py  draw_fms_weather.py  era5_benchmark.py  gradual_land_penalty.py  paper_figures.py  paper_plots.py  paper_results.py  paper_results_benchmark.py  paper_results_orthodromic.py  parameter_search.py  parametric_benchmark.py  plot_noconstraint_comparison.py  results_land_avoidance.py  results_on_literature_vector_fields.py  run_results.sh  single_run.py  slurm_sweep_atlantic.sh  slurm_sweep_stage_a.sh  slurm_sweep_stage_b.sh  sweep_atlantic.py  sweep_stage_a.py  sweep_stage_b.py  sweep_ww_analysis.py  swopp3_analysis.py  swopp3_animate_single_departure.py  swopp3_apply_fms.py  swopp3_count_violations.py  swopp3_npoints_comparison.py  swopp3_plot_routes.py  swopp3_run.py  swopp3_slurm.sh  swopp3_slurm_atlantic.sh  swopp3_slurm_atlantic_k10.sh  swopp3_slurm_gpu.sh  (+17 more)
tests/: test_benchmark.py  test_benchmark_load.py  test_cmaes.py  test_compare_era5_sources.py  test_cost.py  test_demo_land_avoidance.py  test_era5.py  test_era5_loader_helpers.py  test_fms.py  test_haversine.py  test_interpolate.py  test_land.py  test_land_waves.py  test_parametric_model.py  test_reroute_land.py  test_resample_track.py  test_swopp3.py  test_swopp3_analysis.py  test_swopp3_output.py  test_swopp3_run.py  test_swopp3_runner.py  test_swopp3_validate.py  test_validate_routes.py  test_violations.py  test_weather.py
tools/: tools_inspect_uv_lock.py
(+30 files in other folders)
